Jumping content fix + SSG build

--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
 	font-family: 'Madera';
-	src: url('fonts/subset-MaderaW01-UltraLight.woff2') format('woff2'),
-		url('fonts/subset-MaderaW01-UltraLight.woff') format('woff');
+	src: url('/fonts/subset-MaderaW01-UltraLight.woff2') format('woff2'),
+		url('/fonts/subset-MaderaW01-UltraLight.woff') format('woff');
 	font-weight: 200;
 	font-style: normal;
 	font-display: swap;
@@ -9,8 +9,8 @@
 
 @font-face {
 	font-family: 'Carmen';
-	src: url('fonts/CarmenSans-Regular.woff2') format('woff2'),
-		url('fonts/CarmenSans-Regular.woff') format('woff');
+	src: url('/fonts/CarmenSans-Regular.woff2') format('woff2'),
+		url('/fonts/CarmenSans-Regular.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 	font-display: swap;
@@ -18,8 +18,8 @@
 
 @font-face {
 	font-family: 'Carmen';
-	src: url('fonts/CarmenSans-Light.woff2') format('woff2'),
-		url('fonts/CarmenSans-Light.woff') format('woff');
+	src: url('/fonts/CarmenSans-Light.woff2') format('woff2'),
+		url('/fonts/CarmenSans-Light.woff') format('woff');
 	font-weight: 300;
 	font-style: normal;
 	font-display: swap;
